minor changes for localisation and adjusting font size of texts

--- a/uk.lproj/Localizable.strings
+++ b/uk.lproj/Localizable.strings
@@ -15,3 +15,4 @@
 "promo5" = "Не втрачай шансу на творчу, цікаву та перспективну працю – плануй своє професійне майбутнє вже сьогодні!";
 "promo6" = "Мрієш заробляти улюбленою справою і отримувати задоволення від професії? Скористайся можливістю потрапити у світ інформаційних технологій!";
 "promo7" = "В майбутньому буде два типи робіт: ті, де Ти будеш керувати комп'ютером - програмувати, і ті, де машини вказуватимуть, що робити Тобі!";
+"skip" = "Пропустити";
