--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -15,3 +15,4 @@
 "promo5" = "Don`t lose your chance to get creative, promissing and lucrative job, plan your future today!";
 "promo6" = "You want to make money doing what you like and enjoy modern career, don`t you? Choose your way to IT world!";
 "promo7" = "In the future there are two types of jobs: those, where You`ll tell the machine what to do - programming, and those, where the machine is going to tell you what to do!";
+"skip" = "Skip";
