--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -15,3 +15,4 @@
 "promo5" = "Не теряй шанса на творческую, интересную и перспективную работу - планируй свое профессиональное будущее уже сегодня!";
 "promo6" = "Мечтаешь зарабатывать любимым делом и получать удовольствие от профессии? Воспользуйся возможностью попасть в мир информационных технологий!";
 "promo7" = "В будущем будет два типа работ: те, где Ты будеш управлять компьютером - программировать, и те, где машины будут указывать, что делать Тебе!";
+"skip" = "Пропустить";
