create 3 keys in Localizable.strings :"send", "textRecovery", "passRecovery"

--- a/uk.lproj/Localizable.strings
+++ b/uk.lproj/Localizable.strings
@@ -22,3 +22,6 @@
 "wrongEmail" = "Не правильна пошта";
 "logIn" = "Увійти/>";
 "skip" = "Пропустити";
+"send" = "ВІДПРАВИТИ />";
+"textRecovery" = "Щоб відновити пароль, введи свою електронну пошту нижче. На дану електронну пошту буде відправлено посилання для відновлення паролю. Термін дії посилання 30 хв.";
+"passRecovery" = "Відновлення паролю";
