--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -22,3 +22,6 @@
 "wrongEmail" = "Wrong email";
 "logIn" = "Log In/>";
 "skip" = "Skip";
+"send" = "SEND />";
+"textRecovery" = "To reset your password, enter your email below. In this e-mail the link to reset your password will be sent. The link is active for 30 min.";
+"passRecovery" = "Password recovery";
