--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -21,7 +21,7 @@
 "inputEmail" = "Введите почту";
 "wrongEmail" = "Не правильная почта";
 "logIn" = "Войти/>";
-"skip" = "Пропустить";
+"skip" = "ПРОПУСТИТЬ ⟩";
 "send" = "ОТПРАВИТЬ />";
 "textRecovery" = "Чтобы восстановить пароль, введите свою электронную почту ниже. На эту электронную почту будет отправлена ссылка для восстановления пароля. Срок действия ссылки 30 мин.";
 "passRecovery" = "Восстановление пароля";
