--- a/uk.lproj/Localizable.strings
+++ b/uk.lproj/Localizable.strings
@@ -21,7 +21,7 @@
 "inputEmail" = "Введіть пошту";
 "wrongEmail" = "Не правильна пошта";
 "logIn" = "Увійти/>";
-"skip" = "Пропустити";
+"skip" = "ПРОПУСТИТИ ⟩";
 "send" = "ВІДПРАВИТИ />";
 "textRecovery" = "Щоб відновити пароль, введи свою електронну пошту нижче. На дану електронну пошту буде відправлено посилання для відновлення паролю. Термін дії посилання 30 хв.";
 "passRecovery" = "Відновлення паролю";
