separate files and fix reference issue

--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 
-"moto" = "PROGRAM THE FUTURE";
+"motto" = "PROGRAM THE FUTURE";
 "start" = "START/>";
 "promo1" = "We guarantee you will receive  many attractive job offers after the successful completion of the course!";
 "promo2" = "Don`t miss your chance to change the world! You have a great opportunity to get up-to-date and high quality education and become a professional programmer!";
