--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 
-"moto" = "ПРОГРАММИРУЙ БУДУЩЕЕ";
+"motto" = "ПРОГРАММИРУЙ БУДУЩЕЕ";
 "start" = "НАЧАТЬ/>";
 "promo1" = "Мы гарантируем Тебе получение предложения работы после успешного завершения обучения!";
 "promo2" = "Не упусти свой шанс изменить мир - получи качественное и современное образование и стань классным специалистом!";
