--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 
-"moto" = "ПРОГРАМУЙ МАЙБУТНЄ!";
+"motto" = "ПРОГРАМУЙ МАЙБУТНЄ!";
 "start" = "ПОЧАТИ/>";
 "promo1" = "Ми гарантуємо Тобі отримання пропозиції працевлаштування після успішного завершення навчання!";
 "promo2" = "Не втрать свій шанс змінити світ - отримай якісну та сучасну освіту і стань класним спеціалістом!";
