--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -25,3 +25,8 @@
 "send" = "ОТПРАВИТЬ />";
 "textRecovery" = "Чтобы восстановить пароль, введите свою электронную почту ниже. На эту электронную почту будет отправлена ссылка для восстановления пароля. Срок действия ссылки 30 мин.";
 "passRecovery" = "Восстановление пароля";
+"error occured" = "Возникла ошибка";
+"back" = "Назад/>";
+"no data" = "Данные не найдены.";
+"task error" = "Невозможно связаться с сервером.";
+"get more info" = "Для получения дополнительной информации звоните";
