--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -25,3 +25,8 @@
 "send" = "ВІДПРАВИТИ />";
 "textRecovery" = "Щоб відновити пароль, введи свою електронну пошту нижче. На дану електронну пошту буде відправлено посилання для відновлення паролю. Термін дії посилання 30 хв.";
 "passRecovery" = "Відновлення паролю";
+"error occured" = "Виникла помилка";
+"back" = "Повернутись/>";
+"no data" = "Дані не знайдені.";
+"task error" = "Неможливо зв'язатися з сервером.";
+"get more info" = "Для отримання додаткової інформації телефонуйте";
