--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "promo7" = "В будущем будет два типа работ: те, где Ты будеш управлять компьютером - программировать, и те, где машины будут указывать, что делать Тебе!";
 "register" = "Зарегистрироваться";
 "forgotPass" = "Забыл пароль?";
-"inputPassword" = "Введите пароль";
+"wrongPassword" = "Не правильный пароль";
 "inputEmail" = "Введите почту";
 "wrongEmail" = "Не правильная почта";
 "logIn" = "Войти/>";
