--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "promo7" = "В майбутньому буде два типи робіт: ті, де Ти будеш керувати комп'ютером - програмувати, і ті, де машини вказуватимуть, що робити Тобі!";
 "register" = "Зареєструватися";
 "forgotPass" = "Забув пароль?";
-"inputPassword" = "Введіть пароль";
+"wrongPassword" = "Не правильний пароль";
 "inputEmail" = "Введіть пошту";
 "wrongEmail" = "Не правильна пошта";
 "logIn" = "Увійти/>";
