--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -15,9 +15,11 @@
 "promo5" = "Не втрачай шансу на творчу, цікаву та перспективну працю – плануй своє професійне майбутнє вже сьогодні!";
 "promo6" = "Мрієш заробляти улюбленою справою і отримувати задоволення від професії? Скористайся можливістю потрапити у світ інформаційних технологій!";
 "promo7" = "В майбутньому буде два типи робіт: ті, де Ти будеш керувати комп'ютером - програмувати, і ті, де машини вказуватимуть, що робити Тобі!";
+"auth" = "Авторизація";
 "register" = "Зареєструватися";
 "forgotPass" = "Забув пароль?";
 "wrongPassword" = "Не правильний пароль";
+"inputPassword" = "Введіть пароль";
 "inputEmail" = "Введіть пошту";
 "wrongEmail" = "Не правильна пошта";
 "logIn" = "Увійти/>";
