--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -32,3 +32,8 @@
 "no data" = "Данные не найдены.";
 "task error" = "Невозможно связаться с сервером.";
 "get more info" = "Для получения дополнительной информации звоните";
+"messages" = "Сообщения";
+"opportunities" = "Возможности";
+"my tasks" = "Мои задания";
+"settings" = "Настройки";
+"exit" = "Выход";
