--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -32,3 +32,8 @@
 "no data" = "Дані не знайдені.";
 "task error" = "Неможливо зв'язатися з сервером.";
 "get more info" = "Для отримання додаткової інформації телефонуйте";
+"messages" = "Повідомлення";
+"opportunities" = "Можливості";
+"my tasks" = "Мої завдання";
+"settings" = "Налаштування";
+"exit" = "Вихід";
