fix alert presentation

--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -37,3 +37,5 @@
 "my tasks" = "Мої завдання";
 "settings" = "Налаштування";
 "exit" = "Вихід";
+"got_it" = "Зрозуміло";
+"comming_soon" = "Очікується...";
