--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -40,3 +40,14 @@
 "got_it" = "Ясно";
 "comming_soon" = "Ожидается...";
 "edit" = "редактировать";
+"my_tasks" = "Мои задания";
+"medium_priority" = "Средний";
+"high_priority" = "Высокий";
+"urgent_priority" = "Срочный";
+"waiting_task" = "Ожидает задание";
+"in_work" = "В работе";
+"paused" = "Приостановлено";
+"completed" = "Завершено";
+"priorities" = "Приоритеты";
+"type" = "Тип";
+"groups" = "Группы";
