refactoring according to design. issue with scrolling of uicollectionview  was fixed

--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -44,10 +44,10 @@
 "medium_priority" = "Medium";
 "high_priority" = "High";
 "urgent_priority" = "Urgent";
-"waiting_task" = "Waiting for a task";
-"in_work" = "In work";
-"paused" = "Paused";
-"completed" = "Completed";
+"waiting_task" = "WAITING FOR A TASK";
+"in_work" = "IN WORK";
+"paused" = "PAUSED";
+"completed" = "COMPLETED";
 "priorities" = "Priorities";
 "type" = "Type";
 "groups" = "Groups";
