added availableOptionsLabel to storyboard

--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -52,3 +52,4 @@
 "type" = "Type";
 "groups" = "Groups";
 "opportunities" = "Opportunities";
+"available_options" = "All functions available to you";
