created structure OpportunitiesModel and enums: CourseView, StudyView, TaskView

--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -53,3 +53,11 @@
 "groups" = "Групи";
 "opportunities" = "Можливості";
 "available_options" = "Всі доступні вам функції";
+"courses_modules_finance" = "Курси/модулі та фінанси";
+"information_about_course" = "Інформація про доступний контент та договора і рахунки";
+"finances" = "Фінанси";
+"available_courses_modules" = "Доступні курси/модулі";
+"tasks_detailed_answer" = "Завдання з розгорнутою відповіддю";
+"answer_assessments" = "Відповідь на завдання та оцінки";
+"type_training" = "Оффлайн навчання";
+"courses_modules_etc" = "курси/модулі, ітд.";
