added each cases to localise

--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -51,3 +51,24 @@
 "priorities" = "Priorities";
 "type" = "Type";
 "groups" = "Groups";
+"first_name" = "First name";
+"second_name" = "Second name";
+"nickname" = "Nick name";
+"birthday" = "Birth day";
+"country" = "Country";
+"city" = "City";
+"address" = "Address";
+"phone" = "Phone";
+"about_me" = "About me";
+"interests" = "Interests";
+"education" = "Education";
+"prev_job" = "Previous job";
+"current_job" = "Current job";
+"about_us" = "About us";
+"skype" = "Skype";
+"facebook" = "Facebook";
+"linkedin" = "LinkedIn";
+"twitter" = "Twitter";
+"prefer_specializations" = "Prefer specializations";
+"educ_form" = "Education form";
+"education_shift" = "Education shift";
