--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -51,3 +51,24 @@
 "priorities" = "Приоритеты";
 "type" = "Тип";
 "groups" = "Группы";
+"first_name" = "Имя";
+"second_name" = "Фамилия";
+"nickname" = "Прозвище";
+"birthday" = "День рождения";
+"country" = "Страна";
+"city" = "Город";
+"address" = "Адрес";
+"phone" = "Телефон";
+"about_me" = "Обо мне";
+"interests" = "Интересы";
+"education" = "Образование";
+"prev_job" = "Предыдущая работа";
+"current_job" = "Текущая работа";
+"about_us" = "О нас";
+"skype" = "Skype";
+"facebook" = "Facebook";
+"linkedin" = "LinkedIn";
+"twitter" = "Twitter";
+"prefer_specializations" = "Выбрана специализация";
+"educ_form" = "Форма обучения";
+"education_shift" = "Смена образования";
