--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -51,3 +51,24 @@
 "priorities" = "Пріоритети";
 "type" = "Тип";
 "groups" = "Групи";
+"first_name" = "Ім'я";
+"second_name" = "Фамілія";
+"nickname" = "Прізвисько";
+"birthday" = "День народження";
+"country" = "Країна";
+"city" = "Місто";
+"address" = "Адресса";
+"phone" = "Телефон";
+"about_me" = "Про мене";
+"interests" = "Інтереси";
+"education" = "Освіта";
+"prev_job" = "Попередня робота";
+"current_job" = "Теперішня робота";
+"about_us" = "Про нас";
+"skype" = "Skype";
+"facebook" = "Facebook";
+"linkedin" = "LinkedIn";
+"twitter" = "Twitter";
+"prefer_specializations" = "Вибрана спеціалізація";
+"educ_form" = "Форма освіти";
+"education_shift" = "Зміна освіти";
