Education Form added. Minor refactoring of Task model

--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -72,3 +72,6 @@
 "prefer_specializations" = "Выбрана специализация";
 "educ_form" = "Форма обучения";
 "education_shift" = "Смена образования";
+"offline" = "оффлайн";
+"online" = "онлайн";
+"online_offline" = "онлайн/оффлайн";
