--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -72,3 +72,6 @@
 "prefer_specializations" = "Prefer specializations";
 "educ_form" = "Education form";
 "education_shift" = "Education shift";
+"offline" = "offline";
+"online" = "online";
+"online_offline" = "online/offline";
