The colours of priorities were added. Low priority was added. JSON Id as rawValue for priorities was added.

--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -41,6 +41,7 @@
 "comming_soon" = "Comming soon...";
 "edit" = "edit";
 "my_tasks" = "My tasks";
+"low_priority" = "Low";
 "medium_priority" = "Medium";
 "high_priority" = "High";
 "urgent_priority" = "Urgent";
