--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -41,6 +41,7 @@
 "comming_soon" = "Очікується...";
 "edit" = "редагувати";
 "my_tasks" = "Мої завдання";
+"low_priority" = "Низький";
 "medium_priority" = "Середній";
 "high_priority" = "Високий";
 "urgent_priority" = "Терміновий";
