adde "country_selection", "system_profile" to localise, created delegate in CountryCoordinator, created header view in SettingsProfileViewController

--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -86,3 +86,5 @@
 "offline" = "offline";
 "online" = "online";
 "online_offline" = "online/offline";
+"country_selection" = "Country selection";
+"system_profile" = "System profile";
