--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -86,3 +86,5 @@
 "offline" = "офлайн";
 "online" = "онлайн";
 "online_offline" = "онлайн/офлайн";
+"country_selection" = "Вібір країни";
+"system_profile" = "Системний профіль";
