improved Country List

--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -88,3 +88,4 @@
 "online_offline" = "online/offline";
 "country_selection" = "Country selection";
 "system_profile" = "System profile";
+"city_selection" = "City selection";
