--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -88,3 +88,4 @@
 "online_offline" = "онлайн/оффлайн";
 "country_selection" = "Выбор страны";
 "system_profile" = "Системный профиль";
+"city_selection" = "Выбор города";
