--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -86,5 +86,6 @@
 "offline" = "офлайн";
 "online" = "онлайн";
 "online_offline" = "онлайн/офлайн";
-"country_selection" = "Вібір країни";
+"country_selection" = "Вибір країни";
 "system_profile" = "Системний профіль";
+"city_selection" = "Вибір міста";
