creating functionality for BirthdayViewController and passing a new birth date to SettingsProfileViewController

--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -89,3 +89,6 @@
 "country_selection" = "Country selection";
 "system_profile" = "System profile";
 "city_selection" = "City selection";
+"done" = "Done";
+"save" = "Save";
+"edit" = "Edit";
