--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -18,10 +18,10 @@
 "auth" = "Авторизация";
 "register" = "Зарегистрироваться";
 "forgotPass" = "Забыл пароль?";
-"wrongPassword" = "Неправильный пароль";
+"wrongPasswordWrongEmail" = "Неправильный пароль или Не правильная почта";
 "inputPassword" = "Введите пароль";
 "inputEmail" = "Введите почту";
-"wrongEmail" = "Не правильная почта";
+"wrongEmailwrongPassword" = "Не правильная почта или Неправильный пароль";
 "logIn" = "Войти/>";
 "skip" = "ПРОПУСТИТЬ";
 "send" = "ОТПРАВИТЬ />";
