added present to Safari Screen, added functional to use Button and TextView Cells

--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -93,3 +93,4 @@
 "save" = "Зберегти";
 "edit" = "Редагувати";
 "choose_your_birthday" = "Виберіть свій день народження";
+"tap_to_edit" = "натисніть, щоб редагувати";
