--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -93,3 +93,4 @@
 "save" = "Сохранить";
 "edit" = "Редактировать";
 "choose_your_birthday" = "Пожалуйста, выберите свой день рождения";
+"tap_to_edit" = "нажмите, чтобы редактировать";
