implementation menu type to education shift and form

--- a/INTITA/Common/Localization/en.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/en.lproj/Localizable.strings
@@ -94,3 +94,6 @@
 "edit" = "Edit";
 "choose_your_birthday" = "Please, choose your birthday";
 "tap_to_edit" = "tap to edit";
+"morning" = "morning";
+"evening" = "evening";
+"all_one" = "all one";
