--- a/INTITA/Common/Localization/ru.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/ru.lproj/Localizable.strings
@@ -94,3 +94,6 @@
 "edit" = "Редактировать";
 "choose_your_birthday" = "Пожалуйста, выберите свой день рождения";
 "tap_to_edit" = "нажмите, чтобы редактировать";
+"morning" = "утренняя";
+"evening" = "вечерняя";
+"all_one" = "без разницы";
