--- a/INTITA/Common/Localization/uk.lproj/Localizable.strings
+++ b/INTITA/Common/Localization/uk.lproj/Localizable.strings
@@ -94,3 +94,6 @@
 "edit" = "Редагувати";
 "choose_your_birthday" = "Виберіть свій день народження";
 "tap_to_edit" = "натисніть, щоб редагувати";
+"morning" = "ранкова";
+"evening" = "вечірня";
+"all_one" = "байдуже";
